--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "pinia": "^2.2.2",
+    "sweetalert2": "^11.13.2",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
